Fix header alignment and give some more hue to header

--- a/styles/shared.scss
+++ b/styles/shared.scss
@@ -1,9 +1,9 @@
 $mainFontStack: 'Sen Variable', 'Arial', system-ui, sans-serif;
 $monoFontStack: 'Fira Code', 'Consolas', monospace;
 
-$accent: hsl(215, 50%, 55%);
-$accentLight: hsl(215, 50%, 60%);
-$accentDark: hsl(215, 50%, 42%);
+$accent: hsl(209, 94%, 42%);
+$accentLight: hsl(215, 90%, 60%);
+$accentDark: hsl(215, 90%, 30%);
 $dark: hsl(340, 13%, 5%);
 $light: hsl(214, 64%, 98%);
 $lightAlt: hsl(0, 0%, 100%);
